fixing a test failure on Unix
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@22316 71c3de6d-444a-0410-be80-ed276b4c234a