@@ -122,8 +122,8 @@ interface ChannelRunner {
             System.out.println("forking a new process");
             // proc = Runtime.getRuntime().exec("java -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=8000 hudson.remoting.Launcher");
 
-
-            proc = Runtime.getRuntime().exec("java -cp \""+getClasspath()+"\" hudson.remoting.Launcher");
+            System.out.println(getClasspath());
+            proc = Runtime.getRuntime().exec(new String[]{"java","-cp",getClasspath(),"hudson.remoting.Launcher"});
 
             copier = new Copier("copier",proc.getErrorStream(),System.out);
             copier.start();
